--- a/app/views/pages/test.html.erb
+++ b/app/views/pages/test.html.erb
@@ -44,7 +44,7 @@
           <div class="max-w-5xl mx-auto text-center">
             <span class="text-xl md:text-2xl font-extrabold text-green-500">TachiFigures</span>
             <h1 class="max-w-4xl mx-auto text-3xl sm:text-4xl lg:text-5xl font-extrabold font-heading mt-1 mb-6 left">Spreadsheets as a service</h1>
-            <p class="text-xl md:text-2xl font-extrabold leading-8 mb-12">TachiFigures helps you simplify complex decisions by quantifying them.</p>
+            <p class="text-xl md:text-2xl font-extrabold leading-8 mb-12">TachiFigures helps you make sense of hazy, complex decisions.</p>
             <div class="flex flex-wrap mb-20 justify-center">
       <a class="inline-block w-full md:w-auto mb-2 md:mb-0 md:mr-4 py-4 px-6 text-center leading-6 text-lg text-white font-extrabold bg-indigo-800 hover:bg-indigo-900 border-3 border-indigo-900 shadow rounded transition duration-200" href="#">See Plans</a>
       </div>
@@ -124,7 +124,7 @@
                   <img class="block w-6 h-6 mr-2 object-contain" src="nigodo-assets/circle-icon-green.svg" alt=""><span class="text-lg font-extrabold" contenteditable="false">We work with you on your deadlines.</span>
                 </div>
                 <div class="flex mb-4 items-center">
-                  <img class="block w-6 h-6 mr-2 object-contain" src="nigodo-assets/circle-icon-green.svg" alt=""><span class="text-lg font-extrabold" contenteditable="false">Know your budget with fixed recurring costs.</span>
+                  <img class="block w-6 h-6 mr-2 object-contain" src="nigodo-assets/circle-icon-green.svg" alt=""><span class="text-lg font-extrabold" contenteditable="false">One straightforward per month fixed cost.</span>
                 </div>
                 <div class="flex items-center">
                   <img class="block w-6 h-6 mr-2 object-contain" src="nigodo-assets/circle-icon-green.svg" alt=""><span class="text-lg font-extrabold" contenteditable="false">Pause anytime.</span>
@@ -170,14 +170,14 @@
           <div class="max-w-5xl mx-auto mb-16 text-center">
             <span class="text-lg font-extrabold text-indigo-500">What's covered</span>
             <h1 class="text-3xl md:text-4xl font-extrabold font-heading mt-4 mb-6">Gain insight and answers</h1>
-            <p class="text-xl font-extrabold leading-8">We build customized analyses for hazy situations, so you can make better informed decisions.</p>
+            <p class="text-xl font-extrabold leading-8">We build customized analyses for your hazy situation, so you make better informed decisions.</p>
           </div>
           <div class="flex flex-wrap -mx-4 -mb-12">
             <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-12">
               <div class="h-full py-12 px-8 bg-white border-3 border-indigo-900 shadow-md rounded-2xl text-center">
                 <img class="block mx-auto mb-4" src="nigodo-assets/features/icon-message.svg" alt="">
                 <h4 class="text-2xl font-extrabold mb-4">Measure your performance</h4>
-                <p class="text-lg font-extrabold leading-7">Visualize how your business or team is performing, according to the metrics that matter to you.</p>
+                <p class="text-lg font-extrabold leading-7">Visualize your business or team performance, according to the metrics that matter to you.</p>
               </div>
             </div>
             <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-12">
@@ -190,31 +190,97 @@
             <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-12">
               <div class="h-full py-12 px-8 bg-white border-3 border-indigo-900 shadow-md rounded-2xl text-center">
                 <img class="block mx-auto mb-4" src="nigodo-assets/features/icon-people.svg" alt="">
-                <h4 class="text-2xl font-extrabold mb-4">Know your operations</h4>
-                <p class="text-lg font-extrabold leading-7">Streamline everyday operations through data analysis and business intelligence.</p>
+                <h4 class="text-2xl font-extrabold mb-4">Automate your operations</h4>
+                <p class="text-lg font-extrabold leading-7">Streamline everyday operations with made-to-order project and  operations management templates.</p>
               </div>
             </div>
             <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-12">
               <div class="h-full py-12 px-8 bg-white border-3 border-indigo-900 shadow-md rounded-2xl text-center">
                 <img class="block mx-auto mb-4" src="nigodo-assets/features/icon-write.svg" alt="">
                 <h4 class="text-2xl font-extrabold mb-4">Valuations and ROI</h4>
-                <p class="text-lg font-extrabold leading-7">Compare the value of multiple outcomes based on expected returns.</p>
+                <p class="text-lg font-extrabold leading-7">Compare expected returns of multiple possible outcomes.</p>
               </div>
             </div>
             <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-12">
               <div class="h-full py-12 px-8 bg-white border-3 border-indigo-900 shadow-md rounded-2xl text-center">
                 <img class="block mx-auto mb-4" src="nigodo-assets/features/icon-box.svg" alt="">
                 <h4 class="text-2xl font-extrabold mb-4">Projections</h4>
-                <p class="text-lg font-extrabold leading-7">See comprehensive forecasts and make sense of the future of your business.</p>
+                <p class="text-lg font-extrabold leading-7">Build comprehensive forecasts and get a sense of your business or project's financial health.</p>
               </div>
             </div>
             <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-12">
               <div class="h-full py-12 px-8 bg-white border-3 border-indigo-900 shadow-md rounded-2xl text-center">
                 <img class="block mx-auto mb-4" src="nigodo-assets/features/icon-settings.svg" alt="">
                 <h4 class="text-2xl font-extrabold mb-4">Quantify the qualitative</h4>
-                <p class="text-lg font-extrabold leading-7">Quantify a problem or situation you're facing.</p>
+                <p class="text-lg font-extrabold leading-7">Quantify a problem or decision you're facing, based on metrics we help you derive.</p>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="py-26 bg-orange-200">
+        <div class="container px-4 mx-auto text-center">
+          <span class="text-lg font-extrabold text-orange-500 text-center align-middle">Pricing</span>
+          <h1 class="text-3xl md:text-4xl font-extrabold font-heading mt-4 mb-6 text-center">One plan, no commitments.</h1>
+
+          <div class="flex flex-wrap -mx-4">
+            <div class="w-full xl:w-1/3 px-4 mb-12 xl:mb-0">
+
+            </div>
+            <div class="w-full xl:w-1/3 px-4 mb-12 xl:mb-0">
+              <div class="max-w-md mx-auto px-6 py-12 md:p-12 bg-white border-3 border-indigo-900 rounded-2xl shadow-md">
+                <div class="text-center mb-12">
+
+                  <h2 class="text-2xl font-extrabold mb-6">TachiFigures All Access</h2>
+                  <div class="flex justify-center items-start mb-2">
+                    <span class="pr-1 text-lg font-extrabold">$</span>
+                    <span class="text-3xl md:text-4xl font-extrabold">4,950/mth</span>
+                  </div>
+                  <p class="font-extrabold leading-7 text-2xl">Book a call</p>
+                </div>
+                <div class="flex mb-4 items-start">
+                  <img class="block w-6 h-6 mr-2 object-contain" src="nigodo-assets/circle-icon-green.svg" alt="">
+                  <span class="text-lg font-extrabold">Unlimited requests</span>
+                </div>
+                <div class="flex mb-4 items-start">
+                  <img class="block w-6 h-6 mr-2 object-contain" src="nigodo-assets/circle-icon-green.svg" alt="">
+                  <span class="text-lg font-extrabold">Unlimited iterations</span>
+                </div>
+                <div class="flex mb-8 items-start">
+                  <img class="block w-6 h-6 mr-2 object-contain" src="nigodo-assets/circle-icon-green.svg" alt="">
+                  <span class="text-lg font-extrabold">Cancel anytime</span>
+                </div>
+                <a class="inline-block w-full py-4 px-6 text-center leading-6 text-lg text-white font-extrabold bg-indigo-800 hover:bg-indigo-900 border-3 border-indigo-900 shadow rounded transition duration-200" href="#">Get Started</a>
+              </div>
+            </div>
+            <div class="w-full xl:w-1/3 px-4">
+
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="pt-26 border-3 border-l-0 border-r-0 border-indigo-900">
+          <div class="pb-16 border-b-3 border-indigo-900">
+            <div class="container px-4 mx-auto text-center">
+              <a class="inline-block mx-auto mb-20" href="#">
+                <img class="h-12" src="nigodo-assets/logo-nigodo.svg" alt="">
+              </a>
+              <div class="flex flex-wrap -mx-4 -mb-6 justify-center">
+                <div class="w-full md:w-1/3 xl:w-auto px-4 mb-6 md:mr-10 2xl:mr-16"><a class="text-xl md:text-2xl font-extrabold hover:text-indigo-800" href="#">Product</a></div>
+                <div class="w-full md:w-1/3 xl:w-auto px-4 mb-6 md:mr-10 2xl:mr-16"><a class="text-xl md:text-2xl font-extrabold hover:text-indigo-800" href="#">Features</a></div>
+                <div class="w-full md:w-1/3 xl:w-auto px-4 mb-6 md:mr-10 2xl:mr-16"><a class="text-xl md:text-2xl font-extrabold hover:text-indigo-800" href="#">Pricing</a></div>
+                <div class="w-full md:w-1/3 xl:w-auto px-4 mb-6 md:mr-10 2xl:mr-16"><a class="text-xl md:text-2xl font-extrabold hover:text-indigo-800" href="#">Resources</a></div>
+                <div class="w-full md:w-1/3 xl:w-auto px-4 mb-6 md:mr-10 2xl:mr-16"><a class="text-xl md:text-2xl font-extrabold hover:text-indigo-800" href="#">Careers</a></div>
+                <div class="w-full md:w-1/3 xl:w-auto px-4 mb-6 md:mr-10 2xl:mr-16"><a class="text-xl md:text-2xl font-extrabold hover:text-indigo-800" href="#">Help</a></div>
+                <div class="w-full md:w-1/3 xl:w-auto px-4 mb-6"><a class="text-xl md:text-2xl font-extrabold hover:text-indigo-800" href="#">Privacy</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="container px-4 pt-16 pb-24 mx-auto">
+            <p class="text-center text-xl md:text-2xl font-extrabold">© 2022 Nigodo. All rights reserved.</p>
           </div>
         </div>
       </section>
