--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -164,7 +164,7 @@
           <div class="max-w-lg mx-auto">
             <div class="flex flex-wrap -mx-2 justify-center">
 
-              <div class="w-full md:w-auto px-2 mb-2"><a class="inline-flex items-center justify-center w-full md:w-auto h-full py-4 px-5 text-center leading-6 text-lg text-white font-extrabold bg-indigo-800 hover:bg-indigo-900 border-3 border-indigo-900 rounded transition duration-200" href="#">See Past Work</a></div>
+              <div class="w-full md:w-auto px-2 mb-2"><a target=”_blank” class="inline-flex items-center justify-center w-full md:w-auto h-full py-4 px-5 text-center leading-6 text-lg text-white font-extrabold bg-indigo-800 hover:bg-indigo-900 border-3 border-indigo-900 rounded transition duration-200" href="http://thefiguresgirl.com/">See Past Work</a></div>
               <div class="w-full px-2">
 
               </div>
