--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -87,12 +87,12 @@
         </div>
       </section>
 
-      <section id="statement" class="py-26 md:py-48 min-h-screen md:min-h-0 bg-orange-200">
+      <section id="statement" class="py-26 md:py-48 md:min-h-0 bg-orange-200">
         <div class="container px-4 pt-16 mx-auto">
           <div class="max-w-xl mx-auto text-center">
 
             <div class="flex flex-wrap items-center justify-center">
-              <h1 class="flex flex-row min-h-screen justify-center items-center text-3xl sm:text-4xl xl:text-5xl font-extrabold font-heading mb-3">Need some analytical firepower?</h1>
+              <h1 class="flex flex-row justify-center items-center text-3xl sm:text-4xl xl:text-5xl font-extrabold font-heading mb-3">Need some analytical firepower?</h1>
             </div>
           </div>
         </div>
