--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -52,7 +52,7 @@
           <div class="max-w-5xl mx-auto text-center">
             <span class="text-xl md:text-2xl font-extrabold text-green-500">TachiFigures</span>
             <h1 class="max-w-4xl mx-auto text-3xl sm:text-4xl lg:text-5xl font-extrabold font-heading mt-1 mb-6 left">Spreadsheets as a service</h1>
-            <p class="text-xl md:text-2xl font-extrabold leading-8 mb-12">TachiFigures helps you make sense of the hazy.</p>
+            <p class="text-xl md:text-2xl font-extrabold leading-8 mb-12">We help you quantify stuff.</p>
             <div class="flex flex-wrap mb-20 justify-center">
       <a class="inline-block w-full md:w-auto mb-2 md:mb-0 md:mr-4 py-4 px-6 text-center leading-6 text-lg text-white font-extrabold bg-indigo-800 hover:bg-indigo-900 border-3 border-indigo-900 shadow rounded transition duration-200" href="#plans">See Plans</a>
       </div>
