--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -11,6 +11,9 @@
   .bg-green-400	{
     background-color: rgb(74 222 128);
   }
+  .bg-green-200 {
+    background-color: rgb(156 230 225);
+  }
 }
 
 
