--- a/app/views/pages/home.html_LOCAL_40634.erb
+++ b/app/views/pages/home.html_LOCAL_40634.erb
@@ -88,7 +88,7 @@
       </section>
 
       <section id="statement" class="py-26 md:py-48 md:min-h-0 bg-orange-200">
-        <div class="container px-4 py-24 mx-auto">
+        <div class="container px-4 pt-16 mx-auto">
           <div class="max-w-xl mx-auto text-center">
 
             <div class="flex flex-wrap items-center justify-center">
