--- a/app/views/pages/home.html_REMOTE_40634.erb
+++ b/app/views/pages/home.html_REMOTE_40634.erb
@@ -52,7 +52,7 @@
           <div class="max-w-5xl mx-auto text-center">
             <span class="text-xl md:text-2xl font-extrabold text-green-500">TachiFigures</span>
             <h1 class="max-w-4xl mx-auto text-3xl sm:text-4xl lg:text-5xl font-extrabold font-heading mt-1 mb-6 left">Spreadsheets as a service</h1>
-            <p class="text-xl md:text-2xl font-extrabold leading-8 mb-12">We help you quantify stuff.</p>
+            <p class="text-xl md:text-2xl font-extrabold leading-8 mb-12">TachiFigures helps you make sense of the hazy.</p>
             <div class="flex flex-wrap mb-20 justify-center">
       <a class="inline-block w-full md:w-auto mb-2 md:mb-0 md:mr-4 py-4 px-6 text-center leading-6 text-lg text-white font-extrabold bg-indigo-800 hover:bg-indigo-900 border-3 border-indigo-900 shadow rounded transition duration-200" href="#plans">See Plans</a>
       </div>
@@ -87,12 +87,12 @@
         </div>
       </section>
 
-      <section id="statement" class="py-26 md:py-48 md:min-h-0 bg-orange-200">
-        <div class="container px-4 py-24 mx-auto">
+      <section id="statement" class="py-26 md:py-48 sm:min-h-screen md:min-h-0 bg-orange-200">
+        <div class="container px-4 sm:pt-16 mx-auto">
           <div class="max-w-xl mx-auto text-center">
 
             <div class="flex flex-wrap items-center justify-center">
-              <h1 class="flex flex-row justify-center items-center text-3xl sm:text-4xl xl:text-5xl font-extrabold font-heading mb-3">Need some analytical firepower?</h1>
+              <h1 class="flex flex-row min-h-screen justify-center items-center text-3xl sm:text-4xl xl:text-5xl font-extrabold font-heading mb-3">Need some analytical firepower?</h1>
             </div>
           </div>
         </div>
@@ -174,7 +174,7 @@
       </section>
 
       <section id="plans" class="py-26 bg-orange-200">
-        <div class="container px-4 pt-4 mx-auto text-center">
+        <div class="container px-4 py-12 mx-auto text-center">
           <span class="text-lg font-extrabold text-orange-500 text-center align-middle">Membership Pricing</span>
           <h1 class="text-3xl md:text-4xl font-extrabold font-heading mt-4 mb-6 text-center">One plan, no commitments.</h1>
 
