--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -103,7 +103,7 @@
           <div class="max-w-5xl mx-auto mb-16 text-center">
             <span class="text-lg font-extrabold text-indigo-500">What's covered</span>
             <h1 class="text-3xl md:text-4xl font-extrabold font-heading mt-4 mb-6">Gain insight and answers</h1>
-            <p class="text-xl font-extrabold leading-8">We build customized analyses for your business, so you make better informed decisions.</p>
+            <p class="text-xl font-extrabold leading-8">We build customized analyses for you, so you can make better informed decisions.</p>
           </div>
           <div class="flex flex-wrap -mx-4 -mb-12">
             <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-12">
