--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -89,7 +89,7 @@
 
       <section id="statement" class="py-26 bg-orange-200 md:py-48 md:min-h-0 relative overflow-hidden">
         <img class="absolute top-0 left-0 w-full md:h-full" src="nigodo-assets/background-elements/pattern-center-dots-orange.svg" alt="">
-        <div class="container px-4 mx-auto relative">
+        <div class="container lg:py-16 px-4 mx-auto relative">
           <div class="text-center mb-16">
             <h1 class="text-4xl font-extrabold font-heading">Need some analytical firepower?</h1>
           </div>
@@ -100,7 +100,7 @@
       </section>
 
       <section id="features" class="py-26 bg-white">
-        <div class="container pt-4 px-4 mx-auto relative">
+        <div class="container lg:py-16 pt-4 px-4 mx-auto relative">
           <div class="max-w-5xl mx-auto mb-16 text-center">
             <span class="text-lg font-extrabold text-indigo-500">What's covered</span>
             <h1 class="text-3xl md:text-4xl font-extrabold font-heading mt-4 mb-6">Gain insight and answers</h1>
@@ -175,7 +175,7 @@
       </section>
 
       <section id="plans" class="py-26 bg-orange-200">
-        <div class="container px-4 pt-4 mx-auto text-center">
+        <div class="container lg:py-16 px-4 pt-4 mx-auto text-center">
           <span class="text-lg font-extrabold text-orange-500 text-center align-middle">Membership Pricing</span>
           <h1 class="text-3xl md:text-4xl font-extrabold font-heading mt-4 mb-6 text-center">One plan, no commitments.</h1>
 
