--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -153,6 +153,20 @@
         </div>
       </section>
 
+      <section id="statement" class="py-26 bg-indigo-200 md:py-48 md:min-h-0 relative overflow-hidden">
+        <img class="absolute top-0 left-0 w-full md:h-full" src="nigodo-assets/background-elements/pattern-center-dots-indigo.svg" alt="">
+        <div class="container lg:py-16 px-4 mx-auto relative">
+          <div class="text-center mb-16">
+            <span class="inline-flex mb-4 h-6 items-center justify-center text-xs font-extrabold px-2 text-indigo-900 rounded border border-indigo-900 bg-green-200 uppercase">The TachiFigures Pipeline</span>
+            <h1 class="text-4xl font-extrabold font-heading">Manage each request asynchronously in your own pipeline.</h1>
+          </div>
+          <img class="block mx-auto mb-12" src="images/tachi-pipeline-png-1675446159634.webp" alt="">
+          <div class="max-w-3xl mx-auto text-center">
+          </div>
+        </div>
+      </section>
+
+
       <section id="past-work" class="bg-green-200 relative overflow-hidden py-60">
         <img class="absolute top-0 w-1/2 md:w-1/3 md:h-full" src="nigodo-assets/background-elements/pattern-smash-dots-green-left.svg" alt="">
         <img class="absolute top-0 right-0 w-1/2 md:w-1/3 md:h-full" src="nigodo-assets/background-elements/pattern-smash-dots-green-right.svg" alt="">
