--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -167,7 +167,7 @@
       </section>
 
 
-      <section id="past-work" class="bg-green-200 relative overflow-hidden py-60">
+      <section id="past-work" class="relative overflow-hidden py-60">
         <img class="absolute top-0 w-1/2 md:w-1/3 md:h-full" src="nigodo-assets/background-elements/pattern-smash-dots-green-left.svg" alt="">
         <img class="absolute top-0 right-0 w-1/2 md:w-1/3 md:h-full" src="nigodo-assets/background-elements/pattern-smash-dots-green-right.svg" alt="">
         <div class="container pt-4 px-4 mx-auto relative">
@@ -246,10 +246,62 @@
         </div>
       </section>
 
-<section id="footer">
+      <section class="relative py-24 overflow-hidden bg-white">
+      <div class="absolute top-0 left-0 h-128 sm:h-156 w-full">
+        <div class="flex h-full justify-between items-start md:items-center">
+          <img class="block w-1/2 md:h-full" src="nigodo-assets/background-elements/pattern-dots-2-orange-left.svg" alt="">
+          <img class="block w-1/2 md:h-full" src="nigodo-assets/background-elements/pattern-dots-2-orange-right.svg" alt="">
+        </div>
+        <img class="-mb-1 block w-full" src="nigodo-assets/background-elements/pattern-horizontal-orange.svg" alt="">
+      </div>
+      <div class="container text-xs px-4 mx-auto relative">
+        <div class="max-w-4xl mx-auto mb-12 text-center">
+          <h1 class="text-3xl md:text-4xl font-extrabold font-heading mb-4" contenteditable="false">FAQs</h1>
+        </div>
+        <div class="max-w-4xl mx-auto pt-4">
+          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">Why wouldn't I hire an analyst?</p>
+            <div>
+            Good question! For starters, the annual cost of a full-time analyst/banker/consultant now exceeds $100,000, plus benefits. Aside from that, you may not always have enough work to keep them busy at all times, so you're stuck paying for time you aren't able to utilize.&nbsp;<br><br></div>
+            <div>Our agency also has a background working as operators, investment bankers, and consultants. We come to the table with advice on how to tackle interesting problems in your business.</div><p></p>
+        </div>
+        <div class="max-w-4xl mx-auto pt-1.5">
+          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">Is there a limit to how many requests I can have?</p>
+            <div>
+            Once subscribed, you're able to add as many requests to your queue as you'd like, and they will be delivered one by one.&nbsp;<br><br></div>
+        </div>
+        <div class="max-w-4xl mx-auto pt-1.5">
+          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">How fast will I receive my requests?</p>
+            <div>
+            On average, most requests are completed in less than a week. However, more complex requests can take longer. We'll take your deadlines into account when prioritizing requests.&nbsp;<br><br></div>
+        </div>
+        <div class="max-w-4xl mx-auto pt-1.5">
+          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">Are there any refunds if I don't like the service?</p>
+            <div>
+            Due to the high quality nature of the work, there will be no refunds issued.&nbsp;<br><br></div>
+        </div>
+        <div class="max-w-4xl mx-auto pt-1.5">
+          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">What if I only have a single request?</p>
+            <div>
+            That's fine. You can cancel your subscription when finished and return when you have additional spreadsheet needs.&nbsp;<br><br></div>
+        </div>
+
+        <div class="max-w-4xl mx-auto pt-1.5">
+          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">How do I request analyses?</p>
+            <div>
+            You will see progress on all TachiFigures projects through your own Trello roadmap.&nbsp;<br><br></div>
+        </div>
+        <div class="max-w-4xl mx-auto pt-1.5">
+          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">What if I don't like the final product?</p>
+            <div>
+            No worries! We'll continue to revise until you're 100% satisfied.&nbsp;<br><br></div>
+        </div>
+        </div>
+      </section>
+
+      <section id="footer">
   <div class="pt-26 border-3 border-l-0 border-r-0 border-indigo-900">
     <div class="pb-16 border-b-3 border-indigo-900">
-      <div class="container pt-4 px-4 mx-auto">
+      <div class="container mt-4 pt-4 px-4 mx-auto">
         <div class="flex flex-wrap -mx-4 justify-between">
           <div class="w-full md:w-auto xl:w-1/3 px-4 mb-14 xl:mb-0">
             <a class="inline-block mx-auto mb-12" href="#">
@@ -276,6 +328,3 @@
     </div>
   </div>
 </section>
-</div>
-</body>
-</html>
