--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -261,8 +261,8 @@
         <div class="max-w-4xl mx-auto pt-4">
           <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">Why wouldn't I hire an analyst?</p>
             <div>
-            Good question! For starters, the annual cost of a full-time analyst/banker/consultant now exceeds $100,000, plus benefits. Aside from that, you may not always have enough work to keep them busy at all times, so you're stuck paying for time you aren't able to utilize.&nbsp;<br><br></div>
-            <div>Our agency also has a background working as operators, investment bankers, and consultants. We come to the table with advice on how to tackle interesting problems in your business.</div><p></p>
+            A full-time analyst/banker/consultant costs around $100,000, plus benefits. Further, you may not always have enough work to keep them busy at all times, so you're stuck paying for time you aren't able to utilize.&nbsp;<br><br></div>
+            <div>Our team also has a background working as operators, investment bankers, and consultants. We come to the table with advice on how to tackle interesting problems in your business.</div><p></p>
         </div>
         <div class="max-w-4xl mx-auto pt-1.5">
           <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">Is there a limit to how many requests I can have?</p>
@@ -288,7 +288,7 @@
         <div class="max-w-4xl mx-auto pt-1.5">
           <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">How do I request analyses?</p>
             <div>
-            You will see progress on all TachiFigures projects through your own Trello roadmap.&nbsp;<br><br></div>
+            You will be given access to a Trello board for all TachiFigures projects. You can see progress on all requests and submit new requests through this board.&nbsp;<br><br></div>
         </div>
         <div class="max-w-4xl mx-auto pt-1.5">
           <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">What if I don't like the final product?</p>
