--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -158,7 +158,7 @@
         <div class="container lg:py-16 px-4 mx-auto relative">
           <div class="text-center mb-16">
             <span class="inline-flex mb-4 h-6 items-center justify-center text-xs font-extrabold px-2 text-indigo-900 rounded border border-indigo-900 bg-green-200 uppercase">The TachiFigures Pipeline</span>
-            <h1 class="text-4xl font-extrabold font-heading">Manage each request asynchronously in your own pipeline.</h1>
+            <h1 class="text-4xl font-extrabold font-heading">Manage each request asynchronously in your own pipeline</h1>
           </div>
           <img class="block mx-auto mb-12" src="images/tachi-pipeline-png-1675446159634.webp" alt="">
           <div class="max-w-3xl mx-auto text-center">
@@ -191,7 +191,7 @@
       <section id="plans" class="py-26 bg-orange-200">
         <div class="container lg:py-16 px-4 pt-4 mx-auto text-center">
           <span class="text-lg font-extrabold text-orange-500 text-center align-middle">Membership Pricing</span>
-          <h1 class="text-3xl md:text-4xl font-extrabold font-heading mt-4 mb-6 text-center">One plan, no commitments.</h1>
+          <h1 class="text-3xl md:text-4xl font-extrabold font-heading mt-4 mb-6 text-center">One plan, no commitments</h1>
 
           <div class="flex flex-wrap -mx-4">
             <div class="w-full xl:w-1/3 px-4 mb-12 xl:mb-0">
