--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -188,6 +188,39 @@
         </div>
       </section>
 
+      <section id="testimonials" class="py-26 bg-green-200 relative overflow-hidden">
+        <div class="container lg:py-16 px-4 py-4 mx-auto text-center">
+        <img class="absolute top-0 lg:h-full left-0 w-1/2" src="nigodo-assets/background-elements/pattern-circle-big-green-left.svg" alt="">
+        <img class="absolute top-0 lg:h-full right-0 w-1/2 md:w-auto" src="nigodo-assets/background-elements/pattern-two-smashes-green-right.svg" alt="">
+        <div class="container px-4 mx-auto relative">
+          <div class="py-4 px-4 lg:px-20 bg-white border-3 border-indigo-900 rounded-2xl shadow-md text-center">
+            <div class="mb-12">
+              <span class="inline-block mb-3 text-lg font-extrabold text-green-500">Testimonials</span>
+              <div class="flex flex-wrap lg:flex-nowrap -mx-4">
+                <div class="hidden md:block self-start px-4 text-orange-300">
+                  <svg width="75" height="64" viewbox="0 0 75 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M74.1252 0.631112L72.2546 13.9596C68.5132 13.6478 65.4734 14.2714 63.1351 15.8303C60.7967 17.3112 59.1599 19.4937 58.2246 22.3776C57.3672 25.1836 57.2113 28.4573 57.7569 32.1986H74.1252V64H42.3239V32.1986C42.3239 20.9746 44.935 12.4787 50.1573 6.71079C55.3796 0.864946 63.3689 -1.16161 74.1252 0.631112ZM31.8014 0.631112L29.9307 13.9596C26.1894 13.6478 23.1495 14.2714 20.8112 15.8303C18.4729 17.3112 16.836 19.4937 15.9007 22.3776C15.0433 25.1836 14.8874 28.4573 15.433 32.1986H31.8014V64H0V32.1986C0 20.9746 2.61114 12.4787 7.83342 6.71079C13.0557 0.864946 21.045 -1.16161 31.8014 0.631112Z" fill="currentColor"></path>
+                  </svg>
+                </div>
+                <div class="w-full lg:w-auto py-6 lg:py-0 px-4">
+                  <h1 class="text-lg sm:text-2xl xl:text-3xl font-extrabold font-heading">I asked TachiFigures to put together an analysis of investor returns for an investment idea in its infancy. They did their own market research to put together some expected costs and projections and I was able to share the spreadsheet verbatim to communicate ROI to investors.</h1>
+                </div>
+                <div class="ml-auto self-end px-4 text-orange-300">
+                  <svg class="h-10 md:h-auto" width="75" height="64" viewbox="0 0 75 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7.62939e-06 63.3689L1.87067 50.0404C5.61201 50.3522 8.65186 49.7286 10.9902 48.1697C13.3285 46.6888 14.9654 44.5063 15.9007 41.6224C16.7581 38.8164 16.914 35.5427 16.3684 31.8014H7.62939e-06V3.8147e-06H31.8014V31.8014C31.8014 43.0254 29.1902 51.5213 23.9679 57.2892C18.7457 63.1351 10.7564 65.1616 7.62939e-06 63.3689ZM42.3239 63.3689L44.1946 50.0404C47.9359 50.3522 50.9757 49.7286 53.3141 48.1697C55.6524 46.6888 57.2892 44.5063 58.2246 41.6224C59.082 38.8164 59.2378 35.5427 58.6922 31.8014H42.3239V3.8147e-06H74.1252V31.8014C74.1252 43.0254 71.5141 51.5213 66.2918 57.2892C61.0695 63.1351 53.0802 65.1616 42.3239 63.3689Z" fill="currentColor"></path>
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <div class="text-center mb-12">
+              <h4 class="text-xl font-extrabold">- Ryan</h4>
+              <span class="text-gray-400 font-bold">Private Equity Investor</span>
+            </div>
+          </div>
+          </div>
+        </div>
+      </section>
+
       <section id="plans" class="py-26 bg-orange-200">
         <div class="container lg:py-16 px-4 pt-4 mx-auto text-center">
           <span class="text-lg font-extrabold text-orange-500 text-center align-middle">Membership Pricing</span>
@@ -206,7 +239,7 @@
                     <span class="pr-1 text-lg font-extrabold">$</span>
                     <span class="text-3xl md:text-4xl font-extrabold">4,950/mth</span>
                   </div>
-                  <a class="mt-4 font-extrabold leading-7 text-2xl hover:text-indigo-800" href="https://calendly.com/tachifigures/30min">Book a Call</a>
+                  <a class="mt-4 font-extrabold leading-7 text-2xl text-indigo-800 hover:text-orange-500" href="https://calendly.com/tachifigures/30min">Book a Call</a>
                 </div>
                 <div class="flex mb-4 items-start">
                   <img class="block w-6 h-6 mr-2 object-contain" src="nigodo-assets/circle-icon-green.svg" alt="">
@@ -245,6 +278,7 @@
           </div>
         </div>
       </section>
+
 
       <section class="relative py-24 overflow-hidden bg-white">
       <div class="absolute top-0 left-0 h-128 sm:h-156 w-full">
