--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -188,11 +188,11 @@
         </div>
       </section>
 
-      <section id="testimonials" class="py-26 bg-green-200 relative overflow-hidden">
+      <section id="testimonials" class="bg-green-200 relative overflow-hidden">
         <div class="container lg:py-16 px-4 py-4 mx-auto text-center">
         <img class="absolute top-0 lg:h-full left-0 w-1/2" src="nigodo-assets/background-elements/pattern-circle-big-green-left.svg" alt="">
         <img class="absolute top-0 lg:h-full right-0 w-1/2 md:w-auto" src="nigodo-assets/background-elements/pattern-two-smashes-green-right.svg" alt="">
-        <div class="container px-4 mx-auto relative">
+        <div class="container py-8 px-4 mx-auto relative">
           <div class="py-4 px-4 lg:px-20 bg-white border-3 border-indigo-900 rounded-2xl shadow-md text-center">
             <div class="mb-12">
               <span class="inline-block mb-3 text-lg font-extrabold text-green-500">Testimonials</span>
@@ -279,56 +279,128 @@
         </div>
       </section>
 
-
-      <section class="relative py-24 overflow-hidden bg-white">
-      <div class="absolute top-0 left-0 h-128 sm:h-156 w-full">
-        <div class="flex h-full justify-between items-start md:items-center">
-          <img class="block w-1/2 md:h-full" src="nigodo-assets/background-elements/pattern-dots-2-orange-left.svg" alt="">
-          <img class="block w-1/2 md:h-full" src="nigodo-assets/background-elements/pattern-dots-2-orange-right.svg" alt="">
-        </div>
-        <img class="-mb-1 block w-full" src="nigodo-assets/background-elements/pattern-horizontal-orange.svg" alt="">
-      </div>
-      <div class="container text-xs px-4 mx-auto relative">
-        <div class="max-w-4xl mx-auto mb-12 text-center">
-          <h1 class="text-3xl md:text-4xl font-extrabold font-heading mb-4" contenteditable="false">FAQs</h1>
-        </div>
-        <div class="max-w-4xl mx-auto pt-4">
-          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">Why wouldn't I hire an analyst?</p>
-            <div>
-            A full-time analyst/banker/consultant costs around $100,000, plus benefits. Further, you may not always have enough work to keep them busy at all times, so you're stuck paying for time you aren't able to utilize.&nbsp;<br><br></div>
-            <div>Our team also has a background working as operators, investment bankers, and consultants. We come to the table with advice on how to tackle interesting problems in your business.</div><p></p>
-        </div>
-        <div class="max-w-4xl mx-auto pt-1.5">
-          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">Is there a limit to how many requests I can have?</p>
-            <div>
-            Once subscribed, you're able to add as many requests to your queue as you'd like, and they will be delivered one by one.&nbsp;<br><br></div>
-        </div>
-        <div class="max-w-4xl mx-auto pt-1.5">
-          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">How fast will I receive my requests?</p>
-            <div>
-            On average, most requests are completed in less than a week. However, more complex requests can take longer. We'll take your deadlines into account when prioritizing requests.&nbsp;<br><br></div>
-        </div>
-        <div class="max-w-4xl mx-auto pt-1.5">
-          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">Are there any refunds if I don't like the service?</p>
-            <div>
-            Due to the high quality nature of the work, there will be no refunds issued.&nbsp;<br><br></div>
-        </div>
-        <div class="max-w-4xl mx-auto pt-1.5">
-          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">What if I only have a single request?</p>
-            <div>
-            That's fine. You can cancel your subscription when finished and return when you have additional spreadsheet needs.&nbsp;<br><br></div>
-        </div>
-
-        <div class="max-w-4xl mx-auto pt-1.5">
-          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">How do I request analyses?</p>
-            <div>
-            You will be given access to a Trello board for all TachiFigures projects. You can see progress on all requests and submit new requests through this board.&nbsp;<br><br></div>
-        </div>
-        <div class="max-w-4xl mx-auto pt-1.5">
-          <p class="text-m font-extrabold leading-7 mb-1" contenteditable="false">What if I don't like the final product?</p>
-            <div>
-            No worries! We'll continue to revise until you're 100% satisfied.&nbsp;<br><br></div>
-        </div>
+      <section id="faq" class="py-10 bg-gray-50 overflow-hidden">
+        <div class="container mx-auto px-4">
+          <div class="relative py-16 px-8 bg-white overflow-hidden rounded-3xl">
+            <div class="absolute top-0 left-1/2 min-w-max transform -translate-x-1/2">
+              <div class="absolute bg-gradient-radial-white w-full h-full"></div>
+              <img src="zanrly-assets/images/faq/pattern-gray.png" alt="">
+            </div>
+            <div class="relative z-10">
+              <div class="mb-10 md:max-w-xl mx-auto text-center">
+                <span class="inline-block mb-5 text-sm text-blue-500 font-bold uppercase tracking-widest">Frequently asked questions</span>
+                <h2 class="font-heading mb-6 text-4xl md:text-5xl lg:text-6xl text-gray-900 font-black tracking-tight">Got questions? We’re here to help!</h2>
+              </div>
+              <div class="max-w-3xl mx-auto">
+                <div class="flex flex-wrap -m-3 mb-10">
+                  <div class="w-full p-3">
+                    <a class="block p-10 bg-gray-100 rounded-3xl" href="#">
+                      <div class="flex flex-wrap -m-2">
+                        <div class="flex-1 p-2">
+                          <h3 class="font-heading mb-4 text-xl text-gray-900 font-black">
+                            Why wouldn't I hire an analyst?
+                          </h3>
+                          <p class="text-gray-500 font-bold">
+                            A full-time analyst/banker/consultant costs around $100,000, plus benefits. Further, you may not always have enough work to keep them busy at all times, so you're stuck paying for time you aren't able to utilize.
+                            <br></br>
+                            Our team also has a background working as operators, investment bankers, and consultants. We come to the table with advice on how to tackle interesting problems in your business.
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="w-full p-3">
+                    <a class="block p-10 bg-gray-100 rounded-3xl" href="#">
+                      <div class="flex flex-wrap -m-2">
+                        <div class="flex-1 p-2">
+                          <h3 class="font-heading mb-4 text-xl text-gray-900 font-black">
+                            Is there a limit to how many requests I can have?
+                          </h3>
+                          <p class="text-gray-500 font-bold">
+                            Once subscribed, you're able to add as many requests to your queue as you'd like, and they will be delivered one by one.
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="w-full p-3">
+                    <a class="block p-10 bg-gray-100 rounded-3xl" href="#">
+                      <div class="flex flex-wrap -m-2">
+                        <div class="flex-1 p-2">
+                          <h3 class="font-heading mb-4 text-xl text-gray-900 font-black">
+                            How fast will I receive my requests?
+                          </h3>
+                          <p class="text-gray-500 font-bold">
+                            On average, most requests are completed in less than a week. However, more complex requests can take longer. We'll take your deadlines into account when prioritizing requests.
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="w-full p-3">
+                    <a class="block p-10 bg-gray-100 rounded-3xl" href="#">
+                      <div class="flex flex-wrap -m-2">
+                        <div class="flex-1 p-2">
+                          <h3 class="font-heading mb-4 text-xl text-gray-900 font-black">
+                            Are there any refunds if I don't like the service?
+                          </h3>
+                          <p class="text-gray-500 font-bold">
+                            Due to the high quality nature of the work, there will be no refunds issued.
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="w-full p-3">
+                    <a class="block p-10 bg-gray-100 rounded-3xl" href="#">
+                      <div class="flex flex-wrap -m-2">
+                        <div class="flex-1 p-2">
+                          <h3 class="font-heading mb-4 text-xl text-gray-900 font-black">
+                            What if I only have a single request?
+                          </h3>
+                          <p class="text-gray-500 font-bold">
+                            That's fine. You can cancel your subscription when finished and return when you have additional spreadsheet needs.
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="w-full p-3">
+                    <a class="block p-10 bg-gray-100 rounded-3xl" href="#">
+                      <div class="flex flex-wrap -m-2">
+                        <div class="flex-1 p-2">
+                          <h3 class="font-heading mb-4 text-xl text-gray-900 font-black">
+                            How do I request analyses?
+                          </h3>
+                          <p class="text-gray-500 font-bold">
+                            You will be given access to a Trello board for all TachiFigures projects. You can see progress on all requests and submit new requests through this board.
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="w-full p-3">
+                    <a class="block p-10 bg-gray-100 rounded-3xl" href="#">
+                      <div class="flex flex-wrap -m-2">
+                        <div class="flex-1 p-2">
+                          <h3 class="font-heading mb-4 text-xl text-gray-900 font-black">
+                            What if I don't like the final product?
+                          </h3>
+                          <p class="text-gray-500 font-bold">
+                            No worries! We'll continue to revise until you're 100% satisfied.
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <p class="text-gray-500 font-bold text-center">
+                  <span>Still have any questions?</span>
+                  <a class="text-blue-500 hover:text-blue-600" href="https://calendly.com/tachifigures/30min">Book a Call</a>
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
