--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,8 +51,8 @@
         <div class="container px-4 pt-4 mx-auto relative">
           <div class="max-w-5xl mx-auto text-center">
             <span class="text-xl md:text-2xl font-extrabold text-green-500">TachiFigures</span>
-            <h1 class="max-w-4xl mx-auto text-3xl sm:text-4xl lg:text-5xl font-extrabold font-heading mt-1 mb-6 left">Spreadsheets as a service</h1>
-            <p class="text-xl md:text-2xl font-extrabold leading-8 mb-12">We help you with your spreadsheet needs.</p>
+            <h1 class="max-w-4xl mx-auto text-3xl sm:text-4xl lg:text-5xl font-extrabold font-heading mt-1 mb-6 left">Spreadsheets as a Service</h1>
+            <p class="text-xl md:text-2xl font-extrabold leading-8 mb-12">We write the functions, you get the answers.</p>
             <div class="flex flex-wrap mb-20 justify-center">
       <a class="inline-block w-full md:w-auto mb-2 md:mb-0 md:mr-4 py-4 px-6 text-center leading-6 text-lg text-white font-extrabold bg-indigo-800 hover:bg-indigo-900 border-3 border-indigo-900 shadow rounded transition duration-200" href="#plans">See Plans</a>
       </div>
@@ -203,7 +203,7 @@
                   </svg>
                 </div>
                 <div class="w-full lg:w-auto py-6 lg:py-0 px-4">
-                  <h1 class="text-lg sm:text-2xl xl:text-3xl font-extrabold font-heading">I asked TachiFigures to put together an analysis of investor returns for an investment idea in its infancy. They did their own market research to put together some expected costs and projections and I was able to share the spreadsheet verbatim to communicate ROI to investors.</h1>
+                  <h1 class="text-lg sm:text-2xl xl:text-3xl font-extrabold font-heading">I asked TachiFigures for an analysis of investor returns for an investment idea in its infancy. They did their own market research on expected costs and projections and I was able to share the resulting spreadsheet verbatim to communicate ROI to investors.</h1>
                 </div>
                 <div class="ml-auto self-end px-4 text-orange-300">
                   <svg class="h-10 md:h-auto" width="75" height="64" viewbox="0 0 75 64" fill="none" xmlns="http://www.w3.org/2000/svg">
