change name for testimonial

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -213,7 +213,7 @@
               </div>
             </div>
             <div class="text-center mb-12">
-              <h4 class="text-xl font-extrabold">- Ryan</h4>
+              <!-- <h4 class="text-xl font-extrabold">- Ryan</h4> -->
               <span class="text-gray-400 font-bold">Private Equity Investor</span>
             </div>
           </div>
